man_MANS = \
	libyogrt.7 \
	yogrt.7 \
	yogrt_remaining.3 \
	yogrt_get_interval1.3 \
	yogrt_set_interval1.3 \
	yogrt_get_interval2.3 \
	yogrt_set_interval2.3 \
	yogrt_get_interval2_start.3 \
	yogrt_set_interval2_start.3 \
	yogrt_get_fudge_factor.3 \
	yogrt_set_fudge_factor.3 \
	yogrt_get_debug.3 \
	yogrt_set_debug.3 \
	yogrt_set_remaining.3 \
	yogrt.conf.5

EXTRA_DIST = $(man_MANS)
